Simplify
RISDEV-0000